[gd_scene load_steps=57 format=2]

[ext_resource path="res://components/attackable/Attackable.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/killable/Killable.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/animation/Animation.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/movable/Movable.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/entity_state_machine/EntityStateMachine.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/enemy/Enemy.gd" type="Script" id=6]
[ext_resource path="res://assets/dark_knight.png" type="Texture" id=7]
[ext_resource path="res://levels/EntityHealthBar.gd" type="Script" id=10]
[ext_resource path="res://entities/enemy/TriggerArea.gd" type="Script" id=11]
[ext_resource path="res://assets/icons.png" type="Texture" id=15]

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 7 )
region = Rect2( 0, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 7 )
region = Rect2( 96, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 7 )
region = Rect2( 192, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 7 )
region = Rect2( 288, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 7 )
region = Rect2( 384, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 7 )
region = Rect2( 480, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 7 )
region = Rect2( 0, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 7 )
region = Rect2( 96, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 7 )
region = Rect2( 192, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 7 )
region = Rect2( 288, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 7 )
region = Rect2( 384, 480, 96, 96 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 7 )
region = Rect2( 288, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 7 )
region = Rect2( 96, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 7 )
region = Rect2( 192, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 7 )
region = Rect2( 384, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 7 )
region = Rect2( 0, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 7 )
region = Rect2( 96, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 7 )
region = Rect2( 192, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 7 )
region = Rect2( 288, 384, 96, 96 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 7 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 7 )
region = Rect2( 96, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 7 )
region = Rect2( 192, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 7 )
region = Rect2( 288, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 7 )
region = Rect2( 384, 96, 96, 96 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ) ],
"loop": false,
"name": "attack",
"speed": 15.0
}, {
"frames": [ SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ) ],
"loop": false,
"name": "death",
"speed": 15.0
}, {
"frames": [ SubResource( 87 ) ],
"loop": false,
"name": "fall",
"speed": 15.0
}, {
"frames": [ SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 93 ), SubResource( 94 ) ],
"loop": false,
"name": "jump",
"speed": 15.0
}, {
"frames": [ SubResource( 95 ) ],
"loop": false,
"name": "land",
"speed": 20.0
}, {
"frames": [ SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ) ],
"loop": false,
"name": "take_damage",
"speed": 15.0
}, {
"frames": [ SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=58]
extents = Vector2( 157, 147.5 )

[sub_resource type="RectangleShape2D" id=59]
extents = Vector2( 87, 89.5 )

[sub_resource type="RectangleShape2D" id=60]
extents = Vector2( 32.5, 13 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 15 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 15 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 15 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 15 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 15 )
region = Rect2( 0, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 15 )
region = Rect2( 16, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 15 )
region = Rect2( 32, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 15 )
region = Rect2( 48, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 15 )
region = Rect2( 0, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 15 )
region = Rect2( 16, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 15 )
region = Rect2( 32, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 15 )
region = Rect2( 48, 96, 16, 16 )

[sub_resource type="SpriteFrames" id=71]
animations = [ {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "attention",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "question",
"speed": 5.0
} ]

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 426, 90 )
script = ExtResource( 6 )
sprite_frames = SubResource( 48 )

[node name="TriggerArea" type="Area2D" parent="."]
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2( 1, -9 )
shape = SubResource( 58 )

[node name="FollowArea" type="Area2D" parent="."]
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea"]
position = Vector2( 0, -9 )
shape = SubResource( 59 )

[node name="AttackArea" type="Area2D" parent="."]
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 0.5, -10 )
shape = SubResource( 60 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -9 )
polygon = PoolVector2Array( 0, 9, 8, 2, 8, -4, 0, -10, -8, -4, -8, 2 )
one_way_collision = true

[node name="Animation" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -14 )

[node name="Reaction" type="AnimatedSprite" parent="."]
position = Vector2( 1, -45 )
frames = SubResource( 71 )
animation = "attack"

[node name="Killable" parent="." instance=ExtResource( 2 )]

[node name="Attackable" parent="." instance=ExtResource( 1 )]

[node name="EntityStateMachine" parent="." instance=ExtResource( 5 )]

[node name="Movable" parent="." instance=ExtResource( 4 )]

[node name="Update" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
autostart = true

[node name="EntityHealthBar" type="HBoxContainer" parent="."]
margin_left = -33.0
margin_top = -43.0
margin_right = 35.0
margin_bottom = -26.0
grow_horizontal = 2
custom_constants/separation = 6
script = ExtResource( 10 )
